# exfor_dictionary

./: .gitignore  LICENSE  MANIFEST.in  README.md  VERSION  abbreviations.py  config.py  convert_dictionary.py  example.ipynb  exfor_dictionary.py  latest.json  pyproject.toml  requirements.txt  setup.py
example/: example.ipynb
json/: Diction-1-System identifiers.json  Diction-144-Data libraries.json  Diction-15-History.json  Diction-16-Status.json  Diction-17-Related reference types.json  Diction-18-Facilities.json  Diction-19-Incident sources.json  Diction-2-Information identifiers.json  Diction-20-Additional results.json  Diction-207-Books.json  Diction-209-Compounds.json  Diction-21-Methods.json  Diction-213-Reaction types.json  Diction-22-Detectors.json  Diction-23-Analyses.json  Diction-236-Quantities (REACTION SF 5-8).json  Diction-24-Data headings.json  Diction-25-Data units.json  Diction-3-Institutes.json  Diction-30-Processes (REACTION SF 3).json  Diction-31-Branches (REACTION SF 5).json  Diction-32-Parameters (REACTION SF 6).json  Diction-33-Particles.json  Diction-34-Modifiers (REACTION SF 8).json  Diction-35-Data types (REACTION SF 9).json  Diction-38-Supplemental information.json  Diction-4-Reference types.json  Diction-43-NLIB for evaluated libraries.json  Diction-5-Journals.json  Diction-6-Reports.json  Diction-7-Conferences.json  Diction-8-Elements.json  trans.9090.json  trans.9091.json  trans.9092.json  trans.9093.json  trans.9094.json  trans.9095.json  trans.9096.json  trans.9097.json  (+17 more)
json/dictions/: Diction-144-Data Libraries for new CINDA.json  Diction-15-History.json  (+56 more)
trans_backup/: trans.9065  trans.9066  trans.9067  trans.9069  trans.9070  trans.9071  trans.9072  trans.9073  trans.9074  trans.9079  trans.9080  trans.9081  trans.9082  trans.9083  trans.9084  trans.9085  trans.9086  trans.9087  trans.9088  trans.9089  trans.9090  trans.9091  trans.9092  trans.9093  trans.9094  trans.9095  trans.9096  trans.9097  trans.9098  trans.9099  trans.9100  trans.9101  trans.9102  trans.9103  trans.9104  trans.9105  trans.9106  trans.9107  trans.9108  trans.9109  (+18 more)
(+66 files in other folders)
